# vcv-rack-plugin-mcp-server

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  MCPBridge.cpp  Makefile  README.md  RackMcpServer.cpp  build_dxt.sh  plugin.json  vcv_rack_mcp_server.py
.github/workflows/: build-plugin.yml
dxt/: vcvrack_client.py
skills/: vcvrack.md  vcvrack_client.py
src/: MCPBridge.cpp  MCPBridge.hpp  RackMcpServer.cpp  RackMcpServer.hpp  plugin.hpp
tests/: test_json_helpers.cpp
